Added basic score graphic

--- a/src/graphics/template.html
+++ b/src/graphics/template.html
@@ -5,6 +5,20 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+	<style>
+		body {
+			margin: 0px;
+		}
+
+		#app {
+			height: 100vh;
+			width: 100vw;
+			padding: 8px;
+			box-sizing: border-box;
+			position: relative;
+		}
+	</style>
+
 	<script type="module">
 		import RefreshRuntime from 'http://localhost:3000/bundles/tabletennis-scoreboard/@react-refresh';
 		RefreshRuntime.injectIntoGlobalHook(window);
